[project]
name = "tomographic-reconstruction"
version = "0.1.0"
description = "Tomographic reconstruction algorithms implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dash>=3.3.0",
  "kaleido>=1.2.0",
  "loguru>=0.7.2",
  "matplotlib>=3.10.7",
  "numpy>=2.3.4",
  "plotly>=6.4.0",
  "psutil>=7.1.3",
  "scikit-image>=0.25.2",
  "scipy>=1.16.2",
]

[tool.pytest.ini_options]
python_classes = "Test*"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = ["tests"]

[tool.setuptools]
tests_require = ["pytest"]

[tool.unittest]
discover_suite = "tests"
